# aws-lambda-haskell-runtime

./: .gitignore  .travis.yml  aws-lambda-runtime-api.cabal  aws-lambda-runtime.cabal  cabal.project  package-example-lambda.hs
.github/workflows/: haskell-ci.yml
docker-image/: Dockerfile
example/: Example.hs
src/AWS/Lambda/: RuntimeAPI.hs
src/AWS/Lambda/RuntimeAPI/: Package.hs
