cabal-version:       2.2
name:                aws-lambda-runtime-api
version:             0

synopsis: Haskell on AWS Lambda Runtime API
category: AWS, Development
description:
  Make "native" Haskell AWS Lambda (using Runtime API).
  .
  * "AWS.Lambda.RuntimeAPI" is for writing lambdas
  .
  * "AWS.Lambda.RuntimeAPI.Package" is for packaging them.

license:      Apache-2.0
license-file: LICENSE
author:       Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:   Oleg Grenrus <oleg.grenrus@iki.fi>

tested-with:  GHC ==8.2.2 || ==8.4.4 || ==8.6.2

source-repository head
  type:     git
  location: https://github.com/phadej/aws-lambda-runtime-api

library
  ghc-options:      -Wall
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    AWS.Lambda.RuntimeAPI
    AWS.Lambda.RuntimeAPI.Package

  -- GHC boot libraries
  build-depends:
    , base              ^>=4.10.1.0 || ^>=4.11.1.0 || ^>=4.12.0.0
    , bytestring        ^>=0.10.8.2
    , containers        ^>=0.5.10.2 || ^>= 0.6.0.1
    , deepseq           ^>=1.4.3.0
    , text              ^>=1.2.3.0
    , time              ^>=1.8.0.2

  -- other dependencies
  build-depends:
    , aeson             ^>=1.4.2.0
    , async             ^>= 2.2.1
    , http-client       ^>=0.5.14
    , http-media        ^>=0.7.1.3
    , http-types        ^>=0.12.2

  -- for Package
  build-depends:
    , filepath    ^>=1.4.1.2
    , parsec      ^>= 3.1.13.0
    , process     ^>= 1.6.1.0
    , zip-archive ^>=0.3.3

executable example-lambda
  ghc-options:      -Wall
  hs-source-dirs:   example
  default-language: Haskell2010
  main-is:          Example.hs

  -- inherited dependencies
  build-depends:
    , base
    , aeson
    , aws-lambda-runtime-api
    , text

  -- additional dependencies
  build-depends:
    , lens        ^>=4.17
    , lens-aeson  ^>=1.0.2
